# cpp-dictionary-builder

./: .gitignore  CMakeLists.txt  README.md
include/: yomitan_dictionary.h
include/yomitan_dictionary_builder/config/: config_loader.h  parser_config.h  parser_registry.h  strategy_factory.h  yaml_convert.h
include/yomitan_dictionary_builder/core/: asset_manager.h  base_parser.h  parser.h  xml_parser.h  yomitan_parser.h
include/yomitan_dictionary_builder/core/dictionary/: common.h  dicentry.h  html_element.h  yomitan_dictionary.h
include/yomitan_dictionary_builder/index/: index_reader.h  jukugo_index_reader.h
include/yomitan_dictionary_builder/parsers/MDict/: mdict_config.h  mdict_exporter.h  mdict_parser.h  subitem_processor.h
include/yomitan_dictionary_builder/parsers/YDP/: parser.h  ydp_parser.h  yomitan_parser.h
include/yomitan_dictionary_builder/strategies/: link_handling_strategy.h
include/yomitan_dictionary_builder/strategies/image/: hashed_image_strategy.h  image_handling_strategy.h
include/yomitan_dictionary_builder/strategies/key/: key_extraction_strategy.h  kjt_extraction_strategy.h
include/yomitan_dictionary_builder/strategies/link/: link_handling_strategy.h  mdict_link_handling_strategy.h  nds_link_extraction_strategy.h
include/yomitan_dictionary_builder/utils/: file_utils.h
include/yomitan_dictionary_builder/utils/jptools/: kana_convert.h  kanji_utils.h
lib/: pugixml.cpp
lib/jagger-2024-03-14/: AUTHORS  Makefile.am  Makefile.in  config.h.in  configure  configure.ac
lib/jagger-2024-03-14/src/: Makefile.am  Makefile.in  jagger.cc  jagger.h  train_jagger.cc
lib/jagger-2024-03-14/swig/: Makefile  README  jagger.i  tagger.h
lib/jagger-2024-03-14/swig/lua/: Makefile
lib/jagger-2024-03-14/swig/perl/: Makefile.PL
lib/jagger-2024-03-14/swig/ruby/: extconf.rb
lib/jagger-2024-03-14/tools/: Makefile.am  Makefile.in  bccwj2jagger.py  eval.py  juman2jagger.py
resources/: dictionaries.yaml
src/: main.cpp  test.cpp  test.xml
src/config/: config_loader.cpp  dictionary_config.h  parser_config.h  parser_registry.cpp  strategy_factory.cpp
src/core/: asset_manager.cpp  base_parser.cpp  dicentry.h  html_element.cpp  html_element.h  parser.cpp  parser.h  xml_parser.cpp  xml_parser.h  yomitan_dictionary.cpp  yomitan_dictionary.h  yomitan_parser.cpp
src/core/dictionary/: dicentry.cpp  dicentry.h  html_element.cpp  html_element.h  yomitan_dictionary.cpp  yomitan_dictionary.h
src/index/: index_reader.cpp  index_reader.h  jukugo_index_reader.cpp
src/parsers/: ydp_parser.cpp
src/parsers/MDict/: mdict_exporter.cpp  mdict_parser.cpp  subitem_processor.cpp
src/parsers/YDP/: parser.cpp  yomitan_parser.cpp
src/strategies/: image_handling_strategy.h  link_handling_strategy.h
src/strategies/image/: hashed_image_strategy.cpp  image_handling_strategy.cpp
src/strategies/key/: kjt_extraction_strategy.cpp  mdict_link_handling_strategy.cpp
src/strategies/link/: nds_link_extraction_strategy.cpp
src/utils/: file_utils.h  kanji_utils.cpp  kanji_utils.h
src/utils/jptools/: kana_convert.cpp  kana_convert.h  kanji_utils.cpp  kanji_utils.h
test/: html_element_test.cpp  index_reader_test.cpp  json_test.cpp  kana_convert_test.cpp  kanji_utils_test.cpp  test_index.json
test/py/convert_images/: convert_to_png.py
test/py/convert_tags/: analyse.py  tag_map.json
test/py_convert_tags/: RGKA9.txt  convert.py  mdict_check_duplicates.py
